[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlus"
dynamic = ["version"]
description = 'Translate raw address strings into the OSM tagging scheme.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["osm", "openstreetmap", "mapping", "address", "geocoding"]
authors = [{ name = "Will", email = "wahubsch@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["usaddress", "regex"]

[project.urls]
Documentation = "https://whubsch.github.io/atlus_py/index.html"
Issues = "https://github.com/whubsch/atlus_py/issues"
Source = "https://github.com/whubsch/atlus_py"

[tool.hatch.version]
path = "src/atlus/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/atlus tests}"

[tool.coverage.run]
source_pkgs = ["atlus", "tests"]
branch = true
parallel = true
omit = ["src/atlus/__about__.py"]

[tool.coverage.paths]
atlus_py = ["src/atlus", "*/atlus_py/src/atlus"]
tests = ["tests", "*/atlus/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
