[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlus"
dynamic = ["version"]
description = 'Translate raw address strings into the OSM tagging scheme.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["osm", "openstreetmap", "mapping", "address", "geocoding"]
authors = [{ name = "Will", email = "wahubsch@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = ["usaddress>=0.5.15", "regex>=2024.11.6"]

[project.urls]
Documentation = "https://whubsch.github.io/atlus/index.html"
Source = "https://github.com/whubsch/atlus"
Issues = "https://github.com/whubsch/atlus/issues"

[tool.hatch.version]
path = "src/atlus/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/atlus tests}"

[tool.coverage.run]
source_pkgs = ["atlus", "tests"]
branch = true
parallel = true
omit = ["src/atlus/__about__.py"]

[tool.coverage.paths]
atlus = ["src/atlus", "*/atlus/src/atlus"]
tests = ["tests", "*/atlus/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["D", "E", "F", "I", "SIM", "UP", "W"]
pydocstyle.convention = "google"
exclude = ["tests/*", "scripts/*"]
isort.split-on-trailing-comma = false

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true
